# Supermarket

./: #BillReport.cpp#  .#BillReport.cpp  .README.md.swp  .gitlab-ci.yml  .main.cpp.swp  BillReport.cpp  BillReport.cpp~  BillReport.hpp  CMakeLists.txt  README.md  README.md~  a.out  deneme.cpp  deneme.out  main.cpp  main.cpp~  money.cpp  money.out  supermarket
.github/workflows/: ccpp.yml  main.yml  main1.yml
.scannerwork/: report-task.txt
BillReport/: .BillReport.hpp.swp  BillReport.hpp  BillReport.hpp~
Details/: .Show.hpp.swp  Show.hpp
Postgres/: tablesetup.hpp
Regulations/: .Add.hpp.swp  .Remove.hpp.swp  Add.hpp  Add.hpp~  Remove.hpp
Sections/: #Games.cpp#  .Books.hpp.swp  .Garden.hpp.swp  .Toys.hpp.swp  Books.hpp  Games.cpp  Games.cpp~  Games.hpp  Garden.hpp  Toys.hpp
Sections/Postgres/: .PostgresConnection.hpp.swp  .setup.hpp.swp  .tablesetup.hpp.swp  PostgresConnection.hpp  PostgresConnection.hpp~  setup.hpp  tablesetup.hpp
Test/: a.out  show_test.cpp  testmain.cpp
test/: Billreport_unittest.cc  a.out  main.cpp  testmain
